# agent-context-loader-bench

./: .env.example  .gitignore  AGENTS.md  README.ko.md  README.md  pyproject.toml
datasets/: requests.yml
reports/: loader-benchmark.md
skills/docs-writing/: SKILL.md
skills/troubleshooting/: SKILL.md
skills/vllm-benchmark/: SKILL.md
src/agent_loader_bench/: __init__.py  __main__.py  cli.py  config.py  corpus.py  report.py  runner.py  tokens.py  trace.py
src/agent_loader_bench/embeddings/: __init__.py  base.py  hashing.py  openai_embedder.py
src/agent_loader_bench/llm/: __init__.py  anthropic_client.py  base.py  openai_client.py
src/agent_loader_bench/loaders/: __init__.py  base.py  fs_direct.py  hybrid.py  json_document.py  manifest_json.py  sqlite_fts.py  sqlite_metadata.py  vector_search.py
tests/: test_anthropic_client.py  test_corpus.py  test_embeddings.py  test_loaders.py  test_project_samples.py  test_report.py  test_runner.py
wiki/concepts/: context-loading.md
wiki/decisions/: markdown-source-of-truth.md
wiki/errors/: missing-index.md
